チャレンジ２

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,2 +1,6 @@
 <h1>Posts#show</h1>
 <p>Find me in app/views/posts/show.html.erb</p>
+タイトル：<%= @post.title %>
+投稿者：<%= @post.user.name %>
+投稿日時：<%= @post.updated_at %>
+本文：<%= @post.content %>
