--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 
   <body>
   <%= link_to 'home',root_path %>
-  <% if session[:user_id] %> 
+  <% if current_user.present? %> 
     <%= link_to 'ユーザ一覧',users_index_path %>
     <%= link_to '投稿一覧',root_path %>
     <%= link_to 'マイページ', mypage_path %>
