--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,19 +1,19 @@
 <h1>Posts#index</h1>
 <p>Find me in app/views/posts/index.html.erb</p>
-<%if session[:user_id] = user.id %>
-    <%= form_for :post, url: posts_path do |f| %>
-        <%= f.label  :title %> <br>
-        <%= f.text_field  :title%><br>
-        <%= f.label  :content %> <br>
-        <%= f.text_field  :content%><br>
-        <%= f.submit %><br>
+<%if session[:user_id]%>
+    <%=form_for :post, url: posts_path do |f|%>
+    <%= f.label  :title%> <br>
+    <%= f.text_field  :title%><br>
+    <%= f.label  :content%> <br>
+    <%= f.text_field  :content%><br>
+    <%= f.submit %><br>
     <%end%>
         
     <p><% @posts.each do|post| %>
-            <%= link_to post.title,"/posts/#{post.id}" %>|
+            <%= link_to post.title,"/posts/#{post.id}" %>|<%=post.updated_at%>|<%=post.user.name%><br>
             <%end%></p>
 <% else %>
     <p><% @posts.each do|post| %>
-        <%= link_to post.title,"/posts/#{post.id}" %>|
+        <%= link_to post.title,"/posts/#{post.id}" %>|<%=post.updated_at%>|<%=post.user.name%><br>
     <%end%></p>
- <%end%><
+ <%end%>
