--- a/app/views/users/mypage.html.erb
+++ b/app/views/users/mypage.html.erb
@@ -1,2 +1,8 @@
 <h1>Users#mypage</h1>
 <p>Find me in app/views/users/mypage.html.erb</p>
+<h1><%=current_user.name%>さんのマイページ</h1>
+今まで投稿一覧<% current_user.posts.count%>
+<%current_user.posts.each do |post|%>
+    <%=link_to post.title,"/posts/#{post.id}"%>
+    <%=post.updated_at%><br/>
+<% end %>
